
Changelog
=========

4.3.1 (unreleased)
------------------

- Display submitted-to proposals (and document version) on document overview.
  Include a link that allows updating outdated documents.
  [deiferni]

- Add form to manually generate custom excerpts and store them in a dossier.
  [deiferni]

- Add markdown support to sablon files, update dependecies to most recent sablon release.
  [deiferni]

- Remove outdated gever styles (moved to plonetheme.teamraum).
  [Kevin Bieri]

- CSRF: Also allow writes to context portlet assignments.
  [lgraf]

- CSRF: Detect redirect loops on @@confirm-action view and
  break them if necessary.
  [lgraf]

- CSRF: Rollback transaction on @@confirm-action view to avoid
  creating redirect loops.
  [lgraf]

- Expanded/Collapsed triangle style for helptext-trigger.
  [Kevin Bieri]

- Add and update french and german translations.
  [phgross]

- Treeportlet: extend caching parameters with current language code.
  [phgross]

- Implement meeting closing:

  - Added automatic generation of excerpts for every scheduled proposal.
  - Copy back the excerpt to the original proposal.
  - Create Proposalhistory entry when decided.
  - Add excerpt box to the ProposalOverview.
  - Update proposal states during closing a meeting.
  - Show decision in ProposalOverview.
  - Made Proposal's Agendaitem backref a One-To-One relation.

  [phgross]

- Made MeetingTransition's CSRF safe.
  [phgross]

- Made documents and mails addable in proposals.
  [phgross]

- Activate statefilter also in subdossiers listings.
  [phgross]

- Fixed french translations
  [phgross]

- Add sablon-template tab on template dossiers.
  [deiferni]

- No longer show sablon templates in navigation.
  [deiferni]

- Fix downloading protocol-previews in safari.
  [deiferni]

- Fix downloading sablong templates in template dossier.
  [deiferni]

- Optimize member and membership view:

  - Added Membership listing to MemberView.
  - Added Edit functionality for Memberships.