@@ -73,6 +73,7 @@ setup(name='opengever.core',
         'ftw.contentmenu >= 2.4.0',
         'ftw.datepicker',
         'ftw.dictstorage [sqlalchemy]',
+        'ftw.footer',
         'ftw.inflator',
         'ftw.journal',
         'ftw.mail',
